2004-04-11  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-stream-filter.c (stream_read): Check that we haven't
	already flushed the stream if the source stream is at EOS - fixes
	an infinite loop case if the user doesn't use a loop to check
	eos() each loop.

2004-04-02  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-stream-cat.c (stream_write): This should be writing
	data, not reading it from the underlying streams. Oops.

2004-03-30  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-charset.c (charset_best_mask): Don't use the charset
	if it is lang specific and the lang doesn't match the
	locale. Fixes bug #138218.

	* gmime/gmime-utils.c (mktime_utc): New function to mktime() into
	UTC.
	(parse_rfc822_date): Use mktime_utc() instead of doing it
	ourselves.
	(parse_broken_date): Same.

2004-03-21  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-stream-buffer.c (stream_write): Fixed a bug when
	writing across block boundaries.

2004-03-09  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-cipher-context.c (g_mime_cipher_verify): Allow the
	sigstream to be NULL (it is optional afterall).

	Thanks to Peter Bloomfield for reminding me about
	g_ascii_strdown() and g_ascii_strup() and for providing the
	original patch.

	* gmime/gmime-charset.c (locale_parse_lang): Don't use
	g_ascii_strdown() and g_ascii_strup() as these functions strdup
	the result rather than working on the input string.
	(g_mime_charset_map_init): Instead of strdup()ing the charset name
	and then using g_ascii_strdown(), just use g_ascii_strdown() since
	it malloc's. Also, even if we have nl_langinfo(), we want to parse
	LC_ALL to get the locale lang.

2004-03-06  Jeffrey Stedfast  <fejj@ximian.com>

	* README: Updated

	* configure.in: Bumped version to 2.1.3

2004-02-28  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-stream-buffer.c (stream_write): Shrink buflen down
	by the number of bytes flushed or we'll loop forever writing the
	same block over and over.
