@@ -1,3 +1,15 @@
+2004-04-19  Jeffrey Stedfast  <fejj@ximian.com>
+
+	* gmime/gmime-content-type.c
+	(g_mime_content_type_new_from_string): Chew up lwsp between the
+	end of the cubtype and the ';' token, if there is any.
+
+2004-04-13  Jeffrey Stedfast  <fejj@ximian.com>
+
+	* gmime/gmime-gpg-context.c (gpg_ctx_parse_status): Save both the
+	TRUST_UNDEFINED trust state as well as the whether or not we get a
+	NO_PUBKEY status message.
+
 2004-04-11  Jeffrey Stedfast  <fejj@ximian.com>
 
 	* gmime/gmime-stream-filter.c (stream_read): Check that we haven't
